--- a/public/index.html
+++ b/public/index.html
@@ -63,10 +63,10 @@
       rel="stylesheet"
     />
     <!-- MDB -->
-    <link
+    <!-- <link
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <title>Bringinghopereact</title>
   </head>
